removed download buttons

--- a/index.html
+++ b/index.html
@@ -62,14 +62,7 @@ $ git checkout gh-pages
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/MasterGerhard/appSupport/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/MasterGerhard/appSupport/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
-          </a>
+          <p>Email the Developer <a href="dev.gerhard@gmx.com">dev.gerhard@gmx.com</a></p>
 
           <p class="repo-owner"><a href="https://github.com/MasterGerhard/appSupport"></a> is maintained by <a href="https://github.com/MasterGerhard">MasterGerhard</a>.</p>
 
