--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 <p>Get ready for the greatest social messaging experience ever!</p>
 
 <h3>
+<a name="test" class="anchor" href="#test"><span class="octicon octicon-link"></span></a>test</h3>
+
+<p>this is a test post</p>
+
 
 
         </section>
