--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
 <h3>
 <a name="chatsnap-coming-soon" class="anchor" href="#chatsnap-coming-soon"><span class="octicon octicon-link"></span></a>Chatsnap Coming Soon!</h3>
 
-<p>Get ready for the greatest social messaging experience ever!</p>
+<p>Get ready for the greatest social messaging experience ever</p>
 
-<h3>
-<a name="test" class="anchor" href="#test"><span class="octicon octicon-link"></span></a>test</h3>
 
-<p>this is a test post</p>
 
 
 
