update for launch

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           
 
 <h3>
-<a name="chatsnap-coming-soon" class="anchor" href="#chatsnap-coming-soon"><span class="octicon octicon-link"></span></a>Chatsnap Coming Soon!</h3>
+<a name="chatsnap-launching-soon" class="anchor" href="#chatsnap-launching-soon"><span class="octicon octicon-link"></span></a>Chatsnap Launch</h3>
 
-<p>Get ready for the greatest social messaging experience ever</p>
+<p>Get ready for the greatest social messaging experience ever! Due in the iOS app store in a few days time, Chatsnap allowes users to send self-destructing photo/video messages to each other.</p>
 
 
 
