--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" >
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
@@ -31,7 +32,7 @@
           
 
 <h3>
-<a name="chatsnap-launching-soon" class="anchor" href="#chatsnap-launching-soon"><span class="octicon octicon-link"></span></a>Chatsnap Launch</h3>
+<a name="chatsnap-coming-soon" class="anchor" href="#chatsnap-coming-soon"><span class="octicon octicon-link"></span></a>Chatsnap Upcoming Launch 4/13/2014</h3>
 
 <p>Get ready for the greatest social messaging experience ever! Due in the iOS app store in a few days time, Chatsnap allowes users to send self-destructing photo/video messages to each other.</p>
 
