--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           
 
 <h3>
-<a name="chatsnap-coming-soon" class="anchor" href="#chatsnap-coming-soon"><span class="octicon octicon-link"></span></a>Chatsnap Upcoming Launch 4/13/2014</h3>
+<a name="chatsnap-coming-soon" class="anchor" href="#chatsnap-coming-soon"><span class="octicon octicon-link"></span></a>4/13/2014<br>Chatsnap's Upcoming Launch </h3>
 
 <p>Get ready for the greatest social messaging experience ever! Due in the iOS app store in a few days time, Chatsnap allowes users to send self-destructing photo/video messages to each other.</p>
 
