bug reporting post

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
           
 
 <h3>
+<a name="report-a-bug" class="anchor" href="#report-a-bug"><span class="octicon octicon-link"></span></a>Bug Reporting<br>4/13/2014</h3>
+
+<p>If you find a bug please be kind enough to shoot me an email explaining what you found. Namely:<ul>
+<li>Use email subject: "Chatsnap Bug"</li>
+<li>Include a short description on how to replicate the bug.</li>
+<li>Potentially add screenshots or any other helpful media explaining the bug</li>
+</ul>
+Your help is appreciated!<br>
+Steve
+</p>
+
+<h3>
 <a name="chatsnap-coming-soon" class="anchor" href="#chatsnap-coming-soon"><span class="octicon octicon-link"></span></a>Chatsnap's Upcoming Launch<br>4/13/2014</h3>
 
 <p>Get ready for the greatest social messaging experience ever! Due in the iOS app store in a few days time, Chatsnap allowes users to send self-destructing photo/video messages to each other.</p>
