--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Steve
         </section>
 
         <aside id="sidebar">
-          <p>Email the Developer <a href="dev.gerhard@gmx.com">dev.gerhard@gmx.com</a></p>
+          <p>Email Me <a href="dev.gerhard@gmx.com">dev.gerhard@gmx.com</a></p>
 
           <p class="repo-owner"><a href="https://github.com/MasterGerhard/appSupport"></a> This site is maintained by <a href="https://github.com/MasterGerhard">MasterGerhard</a>.</p>
 
