email address fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 <h3>
 <a name="report-a-bug" class="anchor" href="#report-a-bug"><span class="octicon octicon-link"></span></a>Bug Reporting<br>4/13/2014</h3>
 
-<p>If you find a bug please be kind enough to shoot me an email explaining what you found. Namely:<ul>
+<p>If you find a bug please be kind enough to shoot 
+
+<a href="mailto:dev.gerhard@gmx.com?Subject=ChapSnap Bug" target="_top">
+me</a> an email explaining what you found. Namely:<ul>
 <li>Use email subject: "Chatsnap Bug"</li>
 <li>Include a short description on how to replicate the bug.</li>
 <li>Potentially add screenshots or any other helpful media explaining the bug</li>
@@ -55,7 +58,7 @@ Steve
         </section>
 
         <aside id="sidebar">
-          <p>Email Me <a href="dev.gerhard@gmx.com">dev.gerhard@gmx.com</a></p>
+          <p><b>Application Support </b><a href="mailto:dev.gerhard@gmx.com" target="_top">dev.gerhard@gmx.com</a></p>
 
           <p class="repo-owner"><a href="https://github.com/MasterGerhard/appSupport"></a> This site is maintained by <a href="https://github.com/MasterGerhard">MasterGerhard</a>.</p>
 
