there was an extra period

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a href="mailto:dev.gerhard@gmx.com?Subject=ChapSnap Bug" target="_top">
 me</a> an email explaining what you found. Namely:<ul>
 <li>Use email subject: "Chatsnap Bug"</li>
-<li>Include a short description on how to replicate the bug.</li>
+<li>Include a short description on how to replicate the bug</li>
 <li>Potentially add screenshots or any other helpful media explaining the bug</li>
 </ul>
 Your help is appreciated!<br>
